# triton-phi

./: docker-compose.yml
client/: client.py  pyproject.toml
tensorrtllm_backend/: Dockerfile  triton.sh
triton_api/: Dockerfile  app.py  pyproject.toml
